# codefortify-starter

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BACKUP_README.md  DOCKER_README.md  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.prod.yml  docker-compose.yml  docker_deploy.sh  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  structure.md
app_libs/: logger_config.py
apps/accounts/: admin.py  audit.py  authentication.py  backends.py  email.py  signals.py  tasks.py  urls.py  utils.py  views.py
apps/accounts/api/: serializers.py  urls.py  views.py
apps/accounts/forms/: __init__.py  admin.py  users.py
apps/accounts/migrations/: 0001_initial.py  0002_user_username.py
apps/accounts/models/: __init__.py  user_logs.py  user_models.py
apps/accounts/templates/accounts/: _form.html  forget_password.html  login.html  otp_verify.html  password_change.html  password_change_done.html  password_reset.html  password_reset_complete.html  (+8 more)
apps/accounts/tests/: test_api.py  test_models.py  test_web.py
apps/home/: admin.py  models.py  urls.py
apps/home/migrations/: 0001_initial.py
apps/home/tests/: test_views.py
base/: choose.py  search.py  utils.py  validators.py
codefortify_starter/: __init__.py  __main__.py  cli.py  constants.py  generator.py  template_engine.py  validators.py
codefortify_starter/templates/base_project/: README.md.jinja  dot-env.example.jinja  dot-gitignore  manage.py.jinja
core/: __init__.py  asgi.py  celery.py  decorators.py  env.py  mixins.py  sanitizers.py  urls.py  utils.py  views.py  wsgi.py
core/middleware/: exceptions.py  security.py
core/settings/: __init__.py  base.py  dev.py  production.py
core/settings/restconf/: __init__.py  main.py  pagination.py
core/templates/: base.html
core/templates/base/: footer.html  header.html  sidebar.html
core/templates/errors/: 400.html  403.html  404.html  405.html  500.html
tests/: test_cli.py  test_generated_projects.py  test_generator.py
(+44 files in other folders)
